@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7299
+#define luatex_svn_revision 7300
